WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39045
Fix layer dump to avoid spurious platform differences
https://bugs.webkit.org/show_bug.cgi?id=39045
Summary
Fix layer dump to avoid spurious platform differences
Simon Fraser (smfr)
Reported
2010-05-12 22:11:59 PDT
The geometry flipping that we do on Leopard causes spurious differences in the layer tree output:
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r59339%20(14316)/compositing/iframes/connect-compositing-iframe-delayed-pretty-diff.html
We should just not dump the sublayer transform on the root layer.
Attachments
Patch
(31.00 KB, patch)
2010-05-12 22:23 PDT
,
Simon Fraser (smfr)
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-05-12 22:23:21 PDT
Created
attachment 55944
[details]
Patch
Mark Rowe (bdash)
Comment 2
2010-05-12 22:25:55 PDT
Comment on
attachment 55944
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2010-05-12 22:29:27 PDT
http://trac.webkit.org/changeset/59342
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug