2010-05-12  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Mark Rowe.

        Fix layer dump to avoid spurious platform differences
        https://bugs.webkit.org/show_bug.cgi?id=39045

        Only dump the children transform on layers that are not the root layer.
        The children transform on the root layer is used on Leopard to implement
        geometry flipping, so avoid this supurious difference in test output.

        * platform/graphics/GraphicsLayer.cpp:
        (WebCore::GraphicsLayer::dumpProperties):

Canonical link: https://commits.webkit.org/50531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59342 268f45cc-cd09-0410-ab3c-d52691b4dbfc